# Attachable-clicker

./: CMakeLists.txt  LICENSE  README.md  clicker.cpp  clicker.h  clickerData.h  injectionClicker.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/codeql/: codeql-config.yml
.github/workflows/: build.yaml  build_linux.yaml  build_win.yaml  code_ql.yaml  codeql.yml  deploy_windows.yaml
clicker/: CMakeLists.txt  clicker.cpp  clicker.h  clickerData.h
clicker/include/: clicker.h  clicker_data.h  routine.h
clicker/include/process_handler/: keyboard_callback.h  linux_process_manager.h  process_manager.h  process_manager_factory.h  windows_process_manager.h
clicker/src/: clicker.cpp  routine.cpp
clicker/src/process_handler/: keyboard_callback.cpp  linux_process_manager.cpp  windows_process_manager.cpp
cmake-modules/: FindJSON.cmake  VersionExtractor.cmake
configured_files/: config.hpp.in
discord/: CMakeLists.txt
discord/include/: discord_bot.h
discord/src/: discord_bot.cpp
gui/: injectionClicker.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/delegates/: action_delegate.hpp  non_editable_delegate.hpp  numeric_delegate.hpp
gui/dialogs/: add_anomaly_dialog.cpp  add_anomaly_dialog.h  clicker_data_dialog.cpp  clicker_data_dialog.h  loading_dialog.cpp  loading_dialog.h
gui/managers/: anomaly.h  anomaly_manager.cpp  anomaly_manager.h  anomaly_runner.cpp  anomaly_runner.h  table_manager.cpp  table_manager.h
imaging/: CMakeLists.txt
imaging/include/: image_processing.h
imaging/src/: image_processing.cpp
